# OOPS20-RAII

./: CMakeLists.txt  Resource.cpp
